--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "@angular/router": "^19.1.0",
     "@angular/ssr": "^19.1.3",
     "@fortawesome/fontawesome-free": "^6.7.2",
+    "@ngx-translate/core": "^16.0.4",
+    "@ngx-translate/http-loader": "^16.0.1",
     "@sweetalert2/ngx-sweetalert2": "^13.0.0",
     "express": "^4.18.2",
     "flowbite": "^3.0.0",
