--- a/angular.json
+++ b/angular.json
@@ -45,9 +45,7 @@
               "src/styles.scss",
               "./node_modules/ngx-toastr/toastr.css"
             ],
-            "scripts": [
-              "./node_modules/flowbite/dist/flowbite.min.js"
-            ],
+            "scripts": [],
             "server": "src/main.server.ts",
             "outputMode": "server",
             "ssr": {
